k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: torchani
  labels:
    name: torchani
    environment: production
